--- a/electron-client/package.json
+++ b/electron-client/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.3",
     "wait-on": "^6.0.0",
     "web-vitals": "^1.1.2"
   },
